# memegpt

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  schemas.py
backend/data/: curated_examples.jsonl
backend/image_processing/: compositor.py  template_configs.py
backend/memory/: conversation_store.py
backend/nlp/: intent_router.py
backend/routers/: chat.py  explain.py  feedback.py  generate.py
backend/vector_db/: chroma_client.py  examples_store.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/feedback/: route.ts
frontend/src/components/: ChatWindow.tsx  FeedbackButtons.tsx  MemeDisplay.tsx  MessageBubble.tsx  ThinkingBubble.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
scripts/: Modelfile  bridges2_job.sh  bridges2_ollama_service.sh  colab_ollama_server.ipynb  dummy_template_test.py  finetune_unsloth.py  ingest_imgflip_dataset.py  prepare_finetune_dataset.py  seed_examples.py  seed_templates.py  use_remote_ollama.sh
